docs/v6/3.Options.md
# Configuration

There are 2 set of configurations.
- Output Builder specific options
- Parser specific options

Eg.

### Parser configuration

```js
{
  removeNSPrefix: false, // remove NS from tag name or attribute name if true
  //ignoreRootElement : false,
  stopNodes: [], //nested tags will not be parsed even for errors
  // isArray: () => false, //User will set it
  htmlEntities: false,
  // skipEmptyListItem: false
  tags:{
    unpaired: [],
    nameFor:{
      cdata: false,
      comment: false,
      text: '#text'
    },
    separateTextProperty: false,
  },
  attributes:{
    ignore: false,
    booleanType: true,
    entities: true,
  },

  // select: ["img[src]"],
  // stop: ["anim", "[ads]"]
  only: [], // rest tags will be skipped. It will result in flat array
  hierarchy: false, //will be used when a particular tag is set to be parsed.
  skip: [], // will be skipped from parse result. on('skip') will be triggered

  select: [], // on('select', tag => tag ) will be called if match
  stop: [], //given tagPath will not be parsed. innerXML will be set as string value
  OutputBuilder: new JsArrBuilder(),
}
```

**Note**: There would be some properties which are yet to be supported but mentioned for future use.

### Output Builder specific options

```js
{
  preserveOrder: false, // If set 'join' value parser will be used for tag values
  nameFor:{
    text: "#text",
    comment: "",
    cdata: "",
  },
  // onTagClose: () => {},
  // onAttribute: () => {},
  piTag: false,
  declaration: false, //"?xml"
  tags: {
    valueParsers: [
      // "trim",
      // "boolean",
      // "number",
      // "currency",
      // "date",
    ]
  },
  attributes:{
    prefix: "@_",
    suffix: "",
    groupBy: "",
    
    valueParsers: [
      // "trim",
      // "boolean",
      // "number",
      // "currency",
      // "date",
    ]
  }
}
```

By default `JsObjOutputBuilder` output builder is used with default options.  

### TypeScript usage (recommended)

Import types and classes from the v6 subpath for best DX:

```ts
import type { V6ParserOptions, V6BuilderOptions } from 'fast-xml-parser/v6';
import { XMLParser, JsObjOutputBuilder } from 'fast-xml-parser/v6';

const builderOpts: V6BuilderOptions = {
  // onAttribute: (name, value, tagName) => ({ name, value })
};

const parserOpts: V6ParserOptions = {
  attributes: { ignore: false, booleanType: true },
  OutputBuilder: new JsObjOutputBuilder(builderOpts),
};

const parser = new XMLParser(parserOpts);
const result = parser.parse('<root>1</root>');
```

If you only need types, prefer `import type` so they’re erased at compile time.

### JavaScript (ESM)

```js
import { XMLParser, JsObjOutputBuilder, JsArrOutputBuilder, JsMinArrOutputBuilder } from 'fast-xml-parser/v6';
import fs from 'node:fs';

const xmlData = fs.readFileSync('sample.xml', 'utf8');

const outputBuilderOptions = {
  onAttribute: (name, value, tagName) => {
    console.log(name, value, tagName);
  }
};

const parserOptions = {
  attributes: {
    ignore: false,
    booleanType: true
  },
  OutputBuilder: new JsObjOutputBuilder(outputBuilderOptions)
};

const parser = new XMLParser(parserOptions);
const result = parser.parse(xmlData);

console.log(JSON.stringify(result, null, 4));
```

### CommonJS (via dynamic import)

```js
(async () => {
  const { XMLParser, JsObjOutputBuilder } = await import('fast-xml-parser/v6');
  const xmlData = require('node:fs').readFileSync('sample.xml', 'utf8');
  const parser = new XMLParser({
    attributes: { ignore: false, booleanType: true },
    OutputBuilder: new JsObjOutputBuilder()
  });
  const result = parser.parse(xmlData);
  console.log(JSON.stringify(result, null, 4));
})();
```
